fix overflow not showing on aboutme

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -23,7 +23,7 @@
 
 .about__me-image {
     border-radius: 2rem;
-    overflow: hidden;
+    overflow: visible;
     transform: rotate(15deg);
     transition: var(--transition);
     transform: rotate(0);
